<resources>

    <string name="app_name">AndroidTask</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_live_chat">Live Chat</string>
    <string name="nav_wish_list">Wish List</string>
    <string name="nav_e_magazine">E-Magazine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
